fix: layout shift, give image fixed ratio

--- a/resources/sass/components/post.scss
+++ b/resources/sass/components/post.scss
@@ -1,8 +1,21 @@
 .post {
   position: relative;
-  
+
   @include e('meta') {
     margin-bottom: 1rem;
+  }
+  @include e('image') {
+      padding-top: 55%;
+      position: relative;
+
+      img {
+          position: absolute;
+          inset: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+      }
   }
   @include e('content') {
     margin-bottom: 1rem;
